# discord-ipc

./: .gitignore  CMakeLists.txt
client/: go.mod
client/src/: client.go
discord/: CMakeLists.txt
discord/src/: rpc_connection.cpp  rpc_connection.h  serialization.cpp  serialization.h
ipc/: go.mod  ipc_windows.go
main/: CMakeLists.txt  go.mod  main.go
main/src/: main.cpp
test/: go.mod  main.go
